# regime-market-data

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
regime_market_data/: __init__.py  data_loader.py
tests/: test_data_loader.py
