[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regime-market-data"
version = "0.1.0"
license = {text = "MIT"}
authors = [{name = "RegimeDetectionApp"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Financial and Insurance Industry",
]
description = "Market data acquisition anti-corruption layer for regime detection"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "yfinance>=0.2.30",
    "pandas>=2.0",
]

[project.urls]
Repository = "https://github.com/govid13427742/regime-market-data"

[tool.setuptools.packages.find]
include = ["regime_market_data*"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
